[gd_scene load_steps=10 format=3 uid="uid://g74kfk2mcvx8"]

[ext_resource type="Script" path="res://scripts/SweeperUi.gd" id="1_kxlhs"]
[ext_resource type="Script" path="res://scripts/UIMarginContainer.gd" id="2_kwtfc"]
[ext_resource type="Texture2D" uid="uid://dvb3neucaic4d" path="res://assets/tiles/score_button.png" id="3_hg1gr"]
[ext_resource type="Texture2D" uid="uid://ca00tpaimcbc4" path="res://assets/tiles/score_button_hover.png" id="4_wtvbx"]
[ext_resource type="Texture2D" uid="uid://cewyd38vautxy" path="res://assets/tiles/button_smile.png" id="5_p2c24"]
[ext_resource type="Texture2D" uid="uid://dxeuk57gdm7rv" path="res://assets/tiles/button_smile_click.png" id="6_mfaii"]
[ext_resource type="Script" path="res://scripts/SaveScoreWindow.gd" id="7_v1a7w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_must1"]
bg_color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0iscp"]
bg_color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[node name="SweeperUI" type="CanvasLayer"]
layer = -1
script = ExtResource("1_kxlhs")

[node name="UIMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_vertical = 0
script = ExtResource("2_kwtfc")

[node name="PanelContainer" type="PanelContainer" parent="UIMarginContainer"]
custom_minimum_size = Vector2(0, 39)
layout_mode = 2
size_flags_vertical = 0

[node name="GameStatusBox" type="HBoxContainer" parent="UIMarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="MineCountPanel" type="Panel" parent="UIMarginContainer/PanelContainer/GameStatusBox"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_must1")

[node name="MineCountLabel" type="Label" parent="UIMarginContainer/PanelContainer/GameStatusBox/MineCountPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.670588, 0, 0, 1)
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreButton" type="TextureButton" parent="UIMarginContainer/PanelContainer/GameStatusBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("3_hg1gr")
texture_pressed = ExtResource("4_wtvbx")
texture_hover = ExtResource("4_wtvbx")
ignore_texture_size = true
stretch_mode = 5

[node name="GameStatusButton" type="TextureButton" parent="UIMarginContainer/PanelContainer/GameStatusBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("5_p2c24")
texture_pressed = ExtResource("6_mfaii")
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsButton" type="TextureButton" parent="UIMarginContainer/PanelContainer/GameStatusBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("5_p2c24")
texture_pressed = ExtResource("6_mfaii")
ignore_texture_size = true
stretch_mode = 5

[node name="TimerCountPanel" type="Panel" parent="UIMarginContainer/PanelContainer/GameStatusBox"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_0iscp")

[node name="TimerCountLabel" type="Label" parent="UIMarginContainer/PanelContainer/GameStatusBox/TimerCountPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.631373, 0, 0, 1)
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveScoreWindow" type="Window" parent="." node_paths=PackedStringArray("sweeper_ui")]
unique_name_in_owner = true
title = "Save Score"
initial_position = 2
size = Vector2i(300, 300)
visible = false
borderless = true
script = ExtResource("7_v1a7w")
sweeper_ui = NodePath("..")

[node name="MarginContainer" type="MarginContainer" parent="SaveScoreWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="SaveScoreWindow/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="CurrentUserName" type="HBoxContainer" parent="SaveScoreWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CurrentUserTextEdit" type="LineEdit" parent="SaveScoreWindow/MarginContainer/VBoxContainer/CurrentUserName"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Score owner name..."
max_length = 8

[node name="CurrentScore" type="HBoxContainer" parent="SaveScoreWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScoreTextLabel" type="RichTextLabel" parent="SaveScoreWindow/MarginContainer/VBoxContainer/CurrentScore"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Your Score: "

[node name="CurrentTime" type="HBoxContainer" parent="SaveScoreWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeTextLabel" type="RichTextLabel" parent="SaveScoreWindow/MarginContainer/VBoxContainer/CurrentTime"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Your time: "

[node name="SaveScoreOrCancel" type="HBoxContainer" parent="SaveScoreWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="SaveCancelButton" type="Button" parent="SaveScoreWindow/MarginContainer/VBoxContainer/SaveScoreOrCancel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="SaveConfirmButton" type="Button" parent="SaveScoreWindow/MarginContainer/VBoxContainer/SaveScoreOrCancel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="List Score window" type="Window" parent="."]
unique_name_in_owner = true
title = "Score table"
initial_position = 2
size = Vector2i(300, 300)
visible = false

[node name="MarginContainer" type="MarginContainer" parent="List Score window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="List Score window/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScoreTable" type="ItemList" parent="List Score window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_search = false
auto_height = true
text_overrun_behavior = 2
item_count = 1
max_columns = 4
item_0/text = "wat"
item_0/selectable = false
item_0/disabled = true
